# clenv

./: .gitignore  README.md  install.sh  pyproject.toml
clenv/: scanner.py  self_uninstall.py  tui.py  uninstaller.py
