[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clenv"
version = "1.0.0"
description = "Your CLI junk drawer, finally cleaned up."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Anas Nafees" }]
keywords = ["cli", "tool", "manager", "uninstall", "cleanup", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/AnasNafees1802/clenv"
Repository = "https://github.com/AnasNafees1802/clenv"
Issues = "https://github.com/AnasNafees1802/clenv"

[project.scripts]
clenv = "clenv.tui:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["clenv*"]
